WebContent/resources/css/main.css
body{
	background-color: #54565e;
}

#body{
	overflow: scroll;
}

#header div{
    font-size:100%;
    vertical-align:baseline;
    background:transparent;
}

#header{
	background-color: #337ab7;
}

#header_text a{
	font-size: 42px;
	color: #fff;
	text-decoration: none !important;
}

#main{
	padding-top: 22px;
	background-color: #fff;
	border-left: 1px solid #000000;
	border-right: 1px solid #000000;
}

#footer{
	background-color: #fff;
	padding-top: 22px;
	border-left: 1px solid #000000;
	border-right: 1px solid #000000;
	border-bottom: 1px solid #000000;
}

.wrap{
	margin-left: 100px;
	margin-right:100px;
}

